--- a/apps/catalog/catalog/src/app/marketplace/title/view/view.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/view/view.component.html
@@ -8,7 +8,7 @@
           </ng-container>
         </section>
         <section>
-          <a mat-flat-button color="primary" routerLink="avails" fragment="avails">
+          <a mat-button class="translucent" routerLink="avails" fragment="avails">
             <span>Search & Buy Terms</span>
             <mat-icon svgIcon="arrow_forward"></mat-icon>
           </a>
@@ -16,7 +16,7 @@
         </section>
       </movie-header-cta>
       
-      <movie-header-actions fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="24px">
+      <movie-header-actions>
         <movie-promotional-links [movie]="movie" [links]="promoLinks"></movie-promotional-links>
       </movie-header-actions>
     </movie-header>
