--- a/styles/components/mat-icon.scss
+++ b/styles/components/mat-icon.scss
@@ -10,6 +10,7 @@
   $foreground: map.get($config, 'foreground');
 
   mat-icon {
+    color: mat.get-color-from-palette($foreground, icon);
     path, g, polygon {
       fill: currentColor;
     }
