7841 vanity metrics filter table and export analytics

--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -24,11 +24,15 @@
 </header>
 
 <section>
-  <analytics-metric-card-list [cards]="aggregatedCards$ | async"></analytics-metric-card-list>
+  <analytics-metric-card-list [cards]="aggregatedCards$ | async" selectable (selection)="filter$.next($event)"></analytics-metric-card-list>
 
   <article>
-    <h3>Buyer was interested in these titles</h3>
-    <bf-table [source]="aggregatedPerTitle$ | async" pagination="5" userFilter>
+    <div>
+      <h3>Buyer was interested in these titles</h3>
+      <button mat-flat-button (click)="exportAnalytics()">Export Analytics</button>
+    </div>
+
+    <bf-table [source]="filtered$ | async" pagination="5" useFilter>
       <ng-template colRef="title.title.international" label="Title" let-title sort>
         {{ title | maxLength:50 }}
       </ng-template>
