7969 privacy policy fix links

--- a/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.html
+++ b/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.html
@@ -335,7 +335,7 @@
               <td>Firebase Authentication (Google Ireland Ltd) Place of processing: Ireland</td>
               <td>id, email address, password, account creation date, last connection date, cookies</td>
               <td>Verify user's identity, give access to the database. </td>
-              <td><a href="https://firebase.google.com/terms/">Privacy Policy</a></td>
+              <td><a href="https://firebase.google.com/terms/" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -349,7 +349,7 @@
                 company name, company address, company phone number, avatar
               </td>
               <td>Display information to authorized users</td>
-              <td><a href="https://firebase.google.com/terms/">Privacy Policy</a></td>
+              <td><a href="https://firebase.google.com/terms/" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -364,7 +364,7 @@
                 each page, clicks on page elements, cookies
               </td>
               <td>Audience analysis to design better experience</td>
-              <td><a href="https://firebase.google.com/terms/">Privacy Policy</a></td>
+              <td><a href="https://firebase.google.com/terms/" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -378,7 +378,7 @@
                 pages visited, time spent on each page, clicks on page elements, cookies
               </td>
               <td>Audience analysis to design better experience</td>
-              <td>Privacy Policy</td>
+              <td><a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -392,7 +392,7 @@
                 visited, time spent on each page, clicks on page elements, cookies
               </td>
               <td>Audience analysis to design better experience</td>
-              <td><a href="https://cloud.google.com/terms/service-terms">Privacy Policy</a></td>
+              <td><a href="https://cloud.google.com/terms/service-terms" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -406,7 +406,7 @@
                 time spent on each page, clicks on page elements, cookies
               </td>
               <td>Audience analysis to design better experience</td>
-              <td><a href="http://support.google.com/datastudio/answer/7019158">Privacy Policy</a></td>
+              <td><a href="http://support.google.com/datastudio/answer/7019158" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -420,7 +420,7 @@
                 each page, clicks on page elements, cookies
               </td>
               <td>Get help from our support</td>
-              <td><a href="https://www.intercom.com/legal/terms-and-policies">Privacy Policy</a></td>
+              <td><a href="https://www.intercom.com/legal/terms-and-policies" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -434,7 +434,7 @@
                 time spent on each page, clicks on page elements, cookies
               </td>
               <td>Audience analysis to design better experience</td>
-              <td><a href="https://www.hotjar.com/legal/policies/privacy/">Privacy Policy</a></td>
+              <td><a href="https://www.hotjar.com/legal/policies/privacy/" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -443,7 +443,7 @@
               <td>Sendgrid (Twilio, Inc.) Place of Processing: United States</td>
               <td>id, name, surname, email address</td>
               <td>Email personalization</td>
-              <td><a href="https://www.twilio.com/legal/tos">Privacy Policy</a></td>
+              <td><a href="https://www.twilio.com/legal/tos" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -452,7 +452,7 @@
               <td>Algolia (Algolia, Inc.) Place of Processing: United States</td>
               <td>id, name, surname, email address, avatar, position, phone number</td>
               <td>Information used as search parameters</td>
-              <td><a href="https://www.algolia.com/policies/terms/">Privacy Policy</a></td>
+              <td><a href="https://www.algolia.com/policies/terms/" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -464,7 +464,7 @@
                 video player viewing time
               </td>
               <td>Display information to authorized users & audience analysis to design better experience</td>
-              <td><a href="https://www.jwplayer.com/tos/">Privacy Policy</a></td>
+              <td><a href="https://www.jwplayer.com/tos/" target="_blank">Privacy Policy</a></td>
             </tr>
             <tr>
               <td>X</td>
@@ -475,7 +475,7 @@
               </td>
               <td>id, name, surname, email address, IP address, browser, device, OS </td>
               <td>Give context for error solving</td>
-              <td><a href="https://sentry.io/terms/">Privacy Policy</a></td>
+              <td><a href="https://sentry.io/terms/" target="_blank">Privacy Policy</a></td>
             </tr>
           </table>
         </div>
