--- a/libs/movie/src/lib/movie/import/import.component.html
+++ b/libs/movie/src/lib/movie/import/import.component.html
@@ -7,7 +7,7 @@
       color="primary"
       mat-stroked-button
       download="import-titles-template.xlsx"
-      href="/assets/templates/import-titles-template.xlsx"
+      [href]="templateUrl"
     >
       <mat-icon svgIcon="cloud_download"></mat-icon><span>Download our excel Titles template</span>
     </a>
