--- a/apps/financiers/financiers/src/app/marketplace/title/list/list.component.scss
+++ b/apps/financiers/financiers/src/app/marketplace/title/list/list.component.scss
@@ -35,3 +35,8 @@ list-filter {
 list-page-description, pdf-export button {
   margin: 24px;
 }
+
+.refresh {
+  margin-left: auto;
+  flex-shrink: 0;
+}
