--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.scss
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.scss
@@ -21,11 +21,6 @@ mat-form-field {
   text-align: center;
 }
 
-list-filter {
-  display: flex;
-  justify-content: center;
-}
-
 .loading {
   width: 100%;
   display: flex;
@@ -39,4 +34,9 @@ list-page-progress {
 
 list-page-description, pdf-export button {
   margin: 24px;
+}
+
+.refresh {
+  margin-left: auto;
+  flex-shrink: 0;
 }
