--- a/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
@@ -62,8 +62,9 @@
       <filter-budget fxLayout="column" [form]="searchForm.minBudget"></filter-budget>
     </ng-template>
 
-    <button mat-icon-button (click)="clear()" matTooltip="Clear all filters">
+    <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
+      Refresh
     </button>
 
   </list-filter>
