--- a/libs/ui/src/lib/list/filter/list-filter.component.scss
+++ b/libs/ui/src/lib/list/filter/list-filter.component.scss
@@ -12,10 +12,13 @@
 }
  /* overflow-y: hidden is used to remove the vertical scrollbar on Safari */
 section {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
   overflow: auto;
   overflow-y: hidden;
   white-space: nowrap;
-  padding-bottom: 24px;
 }
 
 mat-card {
@@ -32,6 +35,7 @@ button.filter {
   padding: 8px 16px;
   font-weight: 500;
   margin-right: 16px;
+  flex-shrink: 0;
   &:hover {
     background-color: var(--background-hover);
   }
