7841 vanity metrics filter table and export analytics

--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -1,4 +1,4 @@
-<header class="dark-contrast-theme" bgAsset="background_header.png" bgTheme="dark">
+<header class="dark-contrast-theme main" bgAsset="background_header.png" bgTheme="dark">
   <button mat-icon-button (click)="goBack()">
     <mat-icon svgIcon="arrow_back"></mat-icon>
   </button>
@@ -27,10 +27,10 @@
   <analytics-metric-card-list [cards]="aggregatedCards$ | async" selectable (selection)="filter$.next($event)"></analytics-metric-card-list>
 
   <article>
-    <div>
+    <header>
       <h3>Buyer was interested in these titles</h3>
       <button mat-flat-button (click)="exportAnalytics()">Export Analytics</button>
-    </div>
+    </header>
 
     <bf-table [source]="filtered$ | async" pagination="5" useFilter>
       <ng-template colRef="title.title.international" label="Title" let-title sort>
