--- a/libs/media/src/lib/file/preview-list/preview-list.component.html
+++ b/libs/media/src/lib/file/preview-list/preview-list.component.html
@@ -1,8 +1,8 @@
 <global-modal>
+  <button *ngIf="index && data.refs.length" mat-icon-button (click)="previous()" matTooltip="Previous" class="previousItem">
+    <mat-icon svgIcon="chevron_left"></mat-icon>
+  </button>
   <article fxLayout fxLayoutAlign="center center">
-    <button *ngIf="index && data.refs.length" mat-icon-button (click)="previous()" matTooltip="Previous">
-      <mat-icon svgIcon="chevron_left"></mat-icon>
-    </button>
     <ng-container [ngSwitch]="data.refs[index].storagePath | fileType">
       <ng-container *ngSwitchCase="'image'">
         <img [ref]="data.refs[index]" asset="no_titles.svg" />
@@ -18,8 +18,8 @@
         <p>Currently supported file are: pdf, images, and videos</p>
       </ng-container>
     </ng-container>
-    <button *ngIf="(index + 1) < data.refs.length" mat-icon-button (click)="next()" matTooltip="Next">
-      <mat-icon svgIcon="chevron_right"></mat-icon>
-    </button>
   </article>
+  <button *ngIf="(index + 1) < data.refs.length" mat-icon-button (click)="next()" matTooltip="Next" class="nextItem">
+    <mat-icon svgIcon="chevron_right"></mat-icon>
+  </button>
 </global-modal>
