--- a/libs/ui/src/lib/global-modal/global-modal.component.html
+++ b/libs/ui/src/lib/global-modal/global-modal.component.html
@@ -1,9 +1,9 @@
 <section [class]="setModalType()">
-  <mat-dialog-header fxLayout fxLayoutAlign="end">
+  <header class="closeButton">
     <button mat-icon-button (click)="close()">
       <mat-icon svgIcon="close"></mat-icon>
     </button>
-  </mat-dialog-header>
+  </header>
   
   <mat-dialog-content class="mat-dialog-content" fxLayout="column">
     <ng-content></ng-content>
