Fix reviews part 1

--- a/libs/ui/src/lib/global-modal/global-modal.component.html
+++ b/libs/ui/src/lib/global-modal/global-modal.component.html
@@ -1,4 +1,4 @@
-<section [class]="setModalType()">
+<section [class]="data.size">
   <header class="closeButton">
     <button mat-icon-button (click)="close()">
       <mat-icon svgIcon="close"></mat-icon>
