--- a/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
@@ -89,4 +89,31 @@
       <movie-picture-upload [movie]="movie"></movie-picture-upload>
     </article>
   </section>
+
+  <section>
+    <h2>Analytics</h2>
+    <bf-table [source]="analytics$ | async" useFilter>
+      <ng-template colRef="user" label="Name" let-user sort>
+        <a [href]="'mailto:' + user?.email">{{ user | displayName }}</a>
+      </ng-template>
+      <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
+        {{ name }}
+      </ng-template>
+      <ng-template colRef="pageView" label="Page views" let-pageView sort>
+        {{ pageView ? pageView : '-' }}
+      </ng-template>
+      <ng-template colRef="promoReelOpened" label="Promo reels" let-promoReelOpened sort>
+        {{ promoReelOpened ? promoReelOpened : '-' }}
+      </ng-template>
+      <ng-template colRef="addedToWishlist" label="In wishlist" let-wishlist sort>
+        {{ wishlist ? wishlist : '-' }}
+      </ng-template>
+      <ng-template colRef="screeningRequested" label="Screening requested" let-screeningRequested sort>
+        {{ screeningRequested ? screeningRequested : '-' }}
+      </ng-template>
+      <ng-template colRef="askingPriceRequested" label="Asking price requested" let-askingPriceRequested sort>
+        {{ askingPriceRequested ? askingPriceRequested : '-' }}
+      </ng-template>
+    </bf-table>
+  </section>
 </ng-container>
