--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -83,6 +83,7 @@
   <!-- TITLE CARD -->
   <ng-template listPageCard let-title>
     <movie-card [movie]="title" [link]="['/c/o/marketplace/title',  title.objectID]" size="poster">
+      <event-request-screening [movieId]="title.id" iconOnly></event-request-screening>
     </movie-card>
   </ng-template>
 
