--- a/libs/event/src/lib/components/request-screening/request-screening.component.html
+++ b/libs/event/src/lib/components/request-screening/request-screening.component.html
@@ -14,8 +14,8 @@
   </span>
 
   <ng-template #icon>
-    <mat-spinner diameter="24" *ngIf="status === 'sending'; else icon" diameter="24"></mat-spinner>
-    <ng-template #icon>
+    <mat-spinner *ngIf="status === 'sending'; else available" diameter="24"></mat-spinner>
+    <ng-template #available>
       <mat-icon svgIcon="ask_screening_2"></mat-icon>
     </ng-template>
   </ng-template>
