text inventory - Cross app - Line 57

--- a/libs/user/src/lib/auth/pages/reset-password/reset-password.component.html
+++ b/libs/user/src/lib/auth/pages/reset-password/reset-password.component.html
@@ -24,7 +24,7 @@
     </mat-form-field>
     <div fxLayout="column" fxLayoutAlign="center center">
       <button [disabled]="submitted" type="submit" mat-flat-button color="accent" (click)="resetPassword()">Reset Password</button>
-      <a mat-button color="primary" routerLink="../connexion">Cancel</a>
+      <a mat-button color="primary" routerLink="../connexion">Come back</a>
     </div>
   </form>
 </section>
