--- a/libs/organization/src/lib/organization/pages/request-access/request-access.component.html
+++ b/libs/organization/src/lib/organization/pages/request-access/request-access.component.html
@@ -6,14 +6,14 @@
       <img asset="wait.svg"/>
       <h1>Looks like you don't have access to {{ currentApp | appName }}... yet!</h1>
       <p class="mat-body-2">
-        Your email address is already associated with an existing user account of 
+        Your email address is already associated with an existing user account of
         <ng-container *ngFor="let app of (orgExistingAccess$ | async); let isLast = last">
-          {{ app | appName }}{{ !isLast ? ' and ': ''}}
-        </ng-container>. 
+          {{ app | appName }}{{ !isLast ? ' and ': ''}}.
+        </ng-container>
         To access {{ currentApp | appName }}, please request access and wait for our team's approval.
       </p>
       <button mat-flat-button color="primary" (click)="joinOptions()" [disabled]="disabledRequest">Join {{ currentApp | appName }}</button>
-      <button mat-button color="primary" (click)="logout()">Sign up with another email</button>
+      <button mat-button color="primary" (click)="logout()">Try with another email address</button>
     </ng-container>
 
     <ng-container *ngSwitchCase="'request'">
