text inventory - Cross app - Line 230

--- a/libs/organization/src/lib/organization/pages/request-access/request-access.component.html
+++ b/libs/organization/src/lib/organization/pages/request-access/request-access.component.html
@@ -21,7 +21,7 @@
       <p class="mat-body-1">
         To access {{ currentApp | appName }}, please select a "role". It will determine the features you can acccess once you've joined the platform.
       </p>
-      <p class="mat-body-2">N.B.: All members from your company will also get granted access to {{ currentApp | appName }}.</p>
+      <p class="mat-body-2">All members from your company will also get granted access to {{ currentApp | appName }}.</p>
 
       <article fxLayout fxLayoutAlign="space-between center" fxLayout.lt-md="column">
         <label fxLayout>
