tooltip inventory - Cross app - Line 18

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -3,7 +3,7 @@
     <header>
       <h1>Dashboard</h1>
       <div fxLayoutGap="24px">
-        <a mat-fab color="black" routerLink="../title/lobby" matTooltip="Add a Title">
+        <a mat-fab color="black" routerLink="../title/lobby" matTooltip="Add Title">
           <mat-icon svgIcon="add"></mat-icon>
         </a>
         <a mat-fab color="black" routerLink="../title" matTooltip="View Titles">
